Update some java code to java 17